Prevented pagination links from jumping to top of page in project gallery, made scripts load through wp_enqueue

--- a/styles/main.css
+++ b/styles/main.css
@@ -105,6 +105,8 @@ body {
       border: none;
       font-size: 1.2rem;
       margin-top: 1rem; }
+      #hero .coloured div button i, #hero .white div button i {
+        pointer-events: none; }
   #hero .coloured {
     background-color: #ad5c51;
     opacity: 0.9;
