--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -53,6 +53,10 @@
       border: none;
       font-size: 1.2rem;
       margin-top: 1rem;
+
+      i {
+        pointer-events: none;
+      }
     }
   }
 
